# ufmt

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Copyright.h  README.md  THANKS  index.html  params.json
src/: ufmt.sln
src/ufmt/: Formatter.cpp  Formatter.h  LanguageDefinition.h  StdH.h  UFMT.cpp  UFMT.h  main.cpp  ufmt.vcxproj  ufmt.vcxproj.filters
src/ufmt/Formatters/: C.cpp  C.h  Html.cpp  Html.h
